--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "phpmailer/phpmailer": "^6.5",
         "simplesamlphp/assert": "^0.8.0",
         "simplesamlphp/saml2": "^4.6",
+        "simplesamlphp/simplesamlphp-assets-base": "^2.0.0",
         "symfony/cache": "^5.4",
         "symfony/config": "^5.4",
         "symfony/console": "^5.4",
@@ -77,7 +78,8 @@
         "symfony/var-exporter": "^5.4",
         "symfony/yaml": "^5.4",
         "twig/intl-extra": "^3.3",
-        "twig/twig": "^3.3.8"
+        "twig/twig": "^3.3.8",
+        "simplesamlphp/composer-module-installer": "^1.3.0"
     },
     "require-dev": {
         "ext-curl": "*",
