Add two more tool-configs to the ignore-list
They only serve purpose in Github Actions

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,5 @@ phpcs.xml export-ignore
 phpunit.xml export-ignore
 .github export-ignore
 .php_cs.dist export-ignore
+.markdownlintignore export-ignore
+.markdownlintrc export-ignore
