--- a/composer.json
+++ b/composer.json
@@ -66,8 +66,8 @@
         "psr/log": "^2.0 || ^3.0",
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
-        "simplesamlphp/saml2": "^4.6",
-        "simplesamlphp/simplesamlphp-assets-base": "^2.0",
+        "simplesamlphp/saml2": "dev-feature/symfony_responses",
+        "simplesamlphp/simplesamlphp-assets-base": "^2.0.0",
         "symfony/cache": "^5.4||^6",
         "symfony/config": "^5.4||^6",
         "symfony/console": "^5.4||^6",
