Split-off Psalm for the testsuite; we can be more lenient here (errorLevel=5)

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -195,7 +195,11 @@ jobs:
 
       - name: Psalm
         continue-on-error: true
-        run: php vendor/bin/psalm --show-info=true --shepherd --php-version=${{ steps.setup-php.outputs.php-version }}
+        run: php vendor/bin/psalm -c psalm.xml --show-info=true --shepherd --php-version=${{ steps.setup-php.outputs.php-version }}
+
+      - name: Psalm (testsuite)
+        continue-on-error: true
+        run: php vendor/bin/psalm -c psalm-dev.xml --show-info=true --shepherd --php-version=${{ steps.setup-php.outputs.php-version }}
 
       - name: Psalter
         continue-on-error: false
