--- a/modules/admin/routing/routes/routes.yml
+++ b/modules/admin/routing/routes/routes.yml
@@ -13,6 +13,9 @@ admin-sandbox:
 admin-test:
     path:       /test/{as}
     defaults:   { _controller: 'SimpleSAML\Module\admin\Controller\Test::main', as: null }
+core-logout:
+    path:       /logout
+    defaults:   { _controller: 'SimpleSAML\Module\admin\Controller\Test::logout' }
 admin-fed:
     path:       /federation
     defaults:   { _controller: 'SimpleSAML\Module\admin\Controller\Federation::main' }
