--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,7 @@
         "symfony/console": "^4.4 || ^5.0",
         "symfony/dependency-injection": "^4.4 || ^5.0",
         "symfony/finder": "^4.4 || ^5.0",
-        "symfony/framework-bundle": "^4.4 || ^5.0",
+        "symfony/framework-bundle": "4.4.x-dev",
         "symfony/http-foundation": "^4.4 || ^5.0",
         "symfony/http-kernel": "^4.4 || ^5.0",
         "symfony/routing": "^4.4 || ^5.0",
