--- a/composer.json
+++ b/composer.json
@@ -115,5 +115,6 @@
             "simplesamlphp/composer-module-installer": true,
             "composer/package-versions-deprecated": true
         }
-    }
+    },
+    "version": "1.19.8"
 }
