--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,12 +1,14 @@
+---
+
 name: CI
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
-    branches: [ '**' ]
+    branches: ['**']
     paths-ignore:
       - '**.md'
   pull_request:
-    branches: [ master, simplesamlphp-* ]
+    branches: [master, simplesamlphp-*]
     paths-ignore:
       - '**.md'
 
@@ -45,7 +47,8 @@ jobs:
 
     steps:
       - name: Setup PHP, with composer and extensions
-        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        # https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: intl, mbstring, mysql, pdo, pdo_sqlite, xml
@@ -68,11 +71,11 @@ jobs:
 
       - name: Get composer cache directory (linux)
         if: ${{ matrix.operating-system == 'ubuntu-latest' }}
-        run: echo "COMPOSER_CACHE=$(composer config cache-files-dir)" >> $GITHUB_ENV
+        run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
       - name: Get composer cache directory (windows)
         if: ${{ matrix.operating-system == 'windows-latest' }}
-        run: echo "COMPOSER_CACHE=$(composer config cache-files-dir)" >> $env:GITHUB_ENV
+        run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$env:GITHUB_ENV"
 
       - name: Cache composer dependencies
         uses: actions/cache@v3
@@ -99,20 +102,21 @@ jobs:
         if: ${{ matrix.php-versions == '8.1' && matrix.operating-system == 'ubuntu-latest' }}
         uses: actions/upload-artifact@v3
         with:
-            name: build-data
-            path: ${{ github.workspace }}/build
+          name: build-data
+          path: ${{ github.workspace }}/build
 
   security:
     name: Security checks
     runs-on: [ubuntu-latest]
     steps:
       - name: Setup PHP, with composer and extensions
-        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        # https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2
         with:
-            php-version: '8.0'
-            extensions: mbstring, xml
-            tools: composer:v2
-            coverage: none
+          php-version: '8.0'
+          extensions: mbstring, xml
+          tools: composer:v2
+          coverage: none
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
@@ -122,9 +126,9 @@ jobs:
       - name: Cache composer dependencies
         uses: actions/cache@v3
         with:
-            path: $COMPOSER_CACHE
-            key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-            restore-keys: ${{ runner.os }}-composer-
+          path: $COMPOSER_CACHE
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
@@ -146,7 +150,8 @@ jobs:
     steps:
       - name: Setup PHP, with composer and extensions
         id: setup-php
-        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        # https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2
         with:
           php-version: '8.0'
           tools: composer:v2
@@ -160,9 +165,9 @@ jobs:
       - name: Cache composer dependencies
         uses: actions/cache@v3
         with:
-            path: $COMPOSER_CACHE
-            key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-            restore-keys: ${{ runner.os }}-composer-
+          path: $COMPOSER_CACHE
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
@@ -176,17 +181,28 @@ jobs:
         uses: codecov/codecov-action@v3
 
       - name: PHP Code Sniffer
-        continue-on-error: false
         run: php vendor/bin/phpcs
 
       - name: Psalm
         continue-on-error: true
-        run: php vendor/bin/psalm -c psalm.xml --show-info=true --shepherd --php-version=${{ steps.setup-php.outputs.php-version }}
+        run: |
+          php vendor/bin/psalm \
+          -c psalm.xml \
+          --show-info=true \
+          --shepherd \
+          --php-version=${{ steps.setup-php.outputs.php-version }}
 
       - name: Psalm (testsuite)
-        continue-on-error: false
-        run: php vendor/bin/psalm -c psalm-dev.xml --show-info=true --shepherd --php-version=${{ steps.setup-php.outputs.php-version }}
+        run: |
+          php vendor/bin/psalm \
+          -c psalm-dev.xml \
+          --show-info=true \
+          --shepherd \
+          --php-version=${{ steps.setup-php.outputs.php-version }}
 
       - name: Psalter
-        continue-on-error: false
-        run: php vendor/bin/psalter --issues=UnnecessaryVarAnnotation --dry-run --php-version=${{ steps.setup-php.outputs.php-version }}
+        run: |
+          php vendor/bin/psalter \
+          --issues=UnnecessaryVarAnnotation \
+          --dry-run \
+          --php-version=${{ steps.setup-php.outputs.php-version }}
