--- a/codecov.yml
+++ b/codecov.yml
@@ -1,16 +1,18 @@
+---
+
 coverage:
   status:
     project:
       default:
         target: 0%
         threshold: 2%
-    patch: off
+    patch: false
 comment:
   layout: "diff"
   behavior: once
   require_changes: true
-  require_base: no
-  require_head: yes
+  require_base: false
+  require_head: true
   branches: null
 github_checks:
   annotations: false
