--- a/modules/exampleauth/routing/routes/routes.yml
+++ b/modules/exampleauth/routing/routes/routes.yml
@@ -1,9 +1,19 @@
+---
+
 exampleauth-authpage:
-    path:       /authpage
-    defaults:   { _controller: 'SimpleSAML\Module\exampleauth\Controller\ExampleAuth::authpage' }
+  path: /authpage
+  defaults: {
+    _controller: 'SimpleSAML\Module\exampleauth\Controller\ExampleAuth::authpage'
+  }
+
 exampleauth-redirecttest:
-    path:       /redirecttest
-    defaults:   { _controller: 'SimpleSAML\Module\exampleauth\Controller\ExampleAuth::redirecttest' }
+  path: /redirecttest
+  defaults: {
+    _controller: 'SimpleSAML\Module\exampleauth\Controller\ExampleAuth::redirecttest'
+  }
+
 exampleauth-resume:
-    path:       /resume
-    defaults:   { _controller: 'SimpleSAML\Module\exampleauth\Controller\ExampleAuth::resume' }
+  path: /resume
+  defaults: {
+    _controller: 'SimpleSAML\Module\exampleauth\Controller\ExampleAuth::resume'
+  }
