--- a/routing/routes/routes.yml
+++ b/routing/routes/routes.yml
@@ -1,17 +1,27 @@
+---
+
 remove_trailing_slash:
-    path: /{module}/{url}
-    defaults: { _controller: SimpleSAML\Module::removeTrailingSlash }
-    requirements:
-        url: ".*/$"
-    methods: [GET]
+  path: /{module}/{url}
+  defaults: {
+    _controller: SimpleSAML\Module::removeTrailingSlash
+  }
+  requirements:
+    url: ".*/$"
+  methods: [GET]
 
 add_trailing_slash:
-    path: /{url}
-    defaults: { _controller: SimpleSAML\Module::addTrailingSlash }
-    requirements:
-        url: "[a-zA-Z0-9_-]+[^/]$"
-    methods: [GET]
+  path: /{url}
+  defaults: {
+    _controller: SimpleSAML\Module::addTrailingSlash
+  }
+  requirements:
+    url: "[a-zA-Z0-9_-]+[^/]$"
+  methods: [GET]
 
 admin-shortcut:
-    path:       /admin
-    defaults:   { _controller: 'SimpleSAML\Module\admin\Controller\Config::main', path: /admin, permanent: true }
+  path: /admin
+  defaults: {
+    _controller: 'SimpleSAML\Module\admin\Controller\Config::main',
+    path: /admin,
+    permanent: true
+  }
