--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,16 @@
-/cert/.gitkeep export-ignore
-/public/assets/.gitkeep export-ignore
-/tests export-ignore
+cert/.gitkeep export-ignore
+public/assets/.gitkeep export-ignore
+tools export-ignore
+tests export-ignore
 codecov.yml export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 psalm.xml export-ignore
+psalm-dev.xml export-ignore
 phpcs.xml export-ignore
 phpunit.xml export-ignore
 .github export-ignore
 .php_cs.dist export-ignore
 .markdownlintignore export-ignore
-.markdownlintrc export-ignore
+.markdownlint.yml export-ignore
